--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,39 @@
 attrdict==2.0.0
+backports.shutil-get-terminal-size==1.0.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
+decorator==4.3.0
+enum34==1.1.6
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 idna==2.7
+ipdb==0.11
+ipython==5.7.0
+ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.5
 pandas==0.23.1
 passlib==1.7.1
+pathlib2==2.3.2
+pexpect==4.6.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
 requests==2.19.1
+scandir==1.7
 scikit-learn==0.19.1
 scipy==1.1.0
+simplegeneric==0.8.1
 six==1.11.0
 sklearn==0.0
 SQLAlchemy==1.2.8
+traitlets==4.3.2
 urllib3==1.23
+wcwidth==0.1.7
 Werkzeug==0.14.1
